--- a/components/scanners/cdxgen/component.yaml
+++ b/components/scanners/cdxgen/component.yaml
@@ -1,5 +1,5 @@
 name: cdxgen
-description: "Creates an SBOM then sends it to a remote Dependency Track"
+description: "Creates an SBOM then sends it to a remote Dependency Track."
 type: scanner
 parameters:
   - name: backend_server_url
