--- a/components/scanners/codeql/component.yaml
+++ b/components/scanners/codeql/component.yaml
@@ -1,5 +1,5 @@
 name: codeql
-description: Run CodeQL against the provided code and print the results
+description: 'Github CodeQL static analysis for code.'
 type: scanner
 steps:
   - name: run-codeql
