Minor improvements to checkov

--- a/components/scanners/checkov/component.yaml
+++ b/components/scanners/checkov/component.yaml
@@ -10,8 +10,8 @@ steps:
     - >
       cd {{ sourceCodeWorkspace }} &&
       /usr/local/bin/checkov \
-        -d . \
-        -o=sarif \
+        --directory=. \
+        --output=sarif \
         --output-file-path={{ scratchWorkspace }} \
         --soft-fail
     # - "--scan-secrets-history"
