--- a/components/scanners/checkov/component.yaml
+++ b/components/scanners/checkov/component.yaml
@@ -12,13 +12,13 @@ steps:
       /usr/local/bin/checkov \
         --directory=. \
         --output=sarif \
-        --output-file-path={{ scratchWorkspace }} \
+        --output-file-path=. \
         --soft-fail
     # - "--scan-secrets-history"
     # - "--secrets-history-timeout=10m"
   - name: "parser"
     image: "components/scanners/checkov"
     env_vars:
-      CHECKOV_RAW_OUT_FILE_PATH: "{{ scratchWorkspace }}/results_sarif.sarif"
+      CHECKOV_RAW_OUT_FILE_PATH: "{{ sourceCodeWorkspace }}/results_sarif.sarif"
       CHECKOV_WORKSPACE_PATH: "{{ sourceCodeWorkspace }}"
     executable: "/bin/app"
