:pencil2: update component descriptions (#1108)
* update component descriptions

* update description for Snyk, fix typo in trivy description

--- a/components/scanners/snyk/component.yaml
+++ b/components/scanners/snyk/component.yaml
@@ -1,5 +1,5 @@
 name: snyk
-description: "Runs snyk open source then parses findings into the OCSF format"
+description: "Static analysis of code and dependencies."
 type: scanner
 parameters:
   - name: http_proxy
