--- a/examples/semgrep/workflow.yaml
+++ b/examples/semgrep/workflow.yaml
@@ -3,5 +3,5 @@ name: gosec
 components:
 - component: file://components/targets/git-clone/component.yaml
 - component: file://components/scanners/semgrep/component.yaml
-- component: file://components/enrichers/custom-annotation/component.yaml
+# - component: file://components/enrichers/custom-annotation/component.yaml
 - component: file://components/reporters/json-logger/component.yaml
