Fixed component location

--- a/components/scanners/semgrep/component.yaml
+++ b/components/scanners/semgrep/component.yaml
@@ -8,15 +8,16 @@ parameters:
 steps:
   - name: run-semgrep
     image: docker.io/returntocorp/semgrep:1.80
-    executable: /usr/local/bin/semgrep
+    executable: "/bin/sh"
     args:
-    - scan
-    - --metrics=off
-    - --config={{.parameters.ruleset}}
-    - --sarif
-    - --sarif-output
-    - "{{ scratchWorkspace }}/semgrep-out.sarif.json"
-    - "{{ sourceCodeWorkspace }}"
+      - "-c"
+      - |
+        cd {{ sourceCodeWorkspace }} && \
+        /usr/local/bin/semgrep scan \
+        --metrics=off \
+        --config={{.parameters.ruleset}} \
+        --sarif \
+        --sarif-output "{{ scratchWorkspace }}/semgrep-out.sarif.json" .
   - name: parser
     image: components/scanners/semgrep
     env_vars:
